Large CSS looking better, need to fix VH on small
Still need to output errors for duplicates and save messages currently in progress

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,11 +1,8 @@
 footer.footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
 }
 div.userArea{
-    height: 80vh;
+    height: 89.5vh;
     width: 100%;
 }
 div.userInputFields{
@@ -25,7 +22,7 @@ div.userInputFields #chatButton{
 }
 #userMessages{
     width: 100%;
-    height: 100%;
+    height: 90%;
 	overflow: scroll;
 	overflow-x: hidden;
 }
