--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,6 @@ body {
 
 
 footer.footer {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
